# yandex-practicum

./: .gitignore  pyproject.toml
yandex_practicum/: client.py  exceptions.py  models.py
