[tool.poetry]
name = "yandex-practicum"
version = "0.1.0"
description = ""
authors = ["Data Name ID"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.6.3"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
types-requests = "^2.31.0.20240218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "RUF001", "ANN002", "ANN003"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
